--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -44,10 +44,10 @@
 					<%= render "shared/user_badge", user: current_user%>
 				</div>
 				<div class="row" id="stats-profil">
-					<div class="texte5"><%= current_user.notifications%></div> <div class="texte2">notification</div>
+					<div class="texte5"><%= current_user.notifications%></div> <div class="texte2">notifications</div>
 				</div>
 				<div class="row" id="stats-profil">
-					<div class="texte5"><%= current_user.notifications2.count%></div> <div class="texte2">défi en cours</div>
+					<div class="texte5"><%= current_user.notifications2.count%></div> <div class="texte2">défis en cours</div>
 				</div>
 				
 		  </div>
