--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -10,7 +10,10 @@
 @import "footer";
 @import "users";
 @import "debates";
-
+@import "challenges";
+@import "doulins";
+@import "arguments";
+@import "comments";
 
 
 @font-face {
