--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -1,3 +1,844 @@
-// Place all the styles related to the arguments controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#new-argument{
+		
+	::-webkit-input-placeholder {
+	   font-family: "gotham";
+	}
+	
+	#new-argument1{
+	background-color:#AAD0FF;
+	margin-top:10px;
+	width: 454px;
+	min-height:120px;
+	margin-bottom:30px;
+	}
+	
+	#new-argument2{
+	background-color:#FF7575;
+	margin-top:10px;
+	width: 454px;
+	min-height:120px;
+	margin-bottom:30px;
+	}
+	
+	#new-argument3{
+	background-color:#CCC;
+	margin-top:10px;
+	width: 454px;
+	min-height:120px;
+	margin-bottom:30px;
+	}
+
+		
+		.title-newarg{
+		
+		width: 325px;
+		margin-top:20px;
+		margin-left: 20px;
+		font-family: "gotham";
+		color:#000000;
+		font-size:19px;
+		background-color:#FFF;
+		border-radius:0px;
+		border: none;
+		}
+	
+
+		.text-newarg{
+		height:300px;
+		width: 405px;
+		margin-left: 20px;
+		font-family: "georgia";
+		font-size:14px;
+		background-color:#FFF;
+		border-radius:0px;
+		border: none;
+		resize:none;
+		box-shadow: none;
+		
+		}
+		
+		.actions-newarg{
+		width:413px;
+		margin-top:-10px;
+		margin-left:40px;
+		background-color:#FFF;
+		position: relative;
+		z-index:1;
+		}
+		.actions{
+		margin-left:10px;
+		border-radius: 0px;
+		background-color:#808080;
+		font-family: "gotham";
+		font-size:16px;
+		color: #000000;
+		color: white;
+		}
+}
+
+#argument-pour{
+
+	.modifs{
+		margin-left:534px;
+		width: 80px;
+		margin-top: 20px;
+				margin-bottom: -68px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #839AB2;
+		color: white;
+		}
+		.texte2{
+		height: 24px;
+		background-color: #C9C9C9;
+		color: white;
+		}	
+	}
+	
+
+	.modifs2{
+		margin-left:534px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -44px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #839AB2;
+		color: white;
+		}
+	}
+	
+	
+	#bleu{
+	background-color:#AAD0FF;
+	margin-top:20px;
+	width: 534px;
+	min-height:170px;
+	margin-left:0px;
+	
+	.toggleClose2{
+	width: 533px;
+	height: 25px;
+	margin-left:1px;
+	margin-top:5px;
+	border-top: 2px Dashed;
+	padding-top:5px;
+	font-family:"gotham";
+	font-size:18px;
+	text-align:right;
+	
+	.toggleClose{
+	text-align:right;
+	padding-right:100px;
+	cursor:  pointer;
+	a{color:#000000;}
+	margin-bottom:5px;
+	}
+	
+	.arrow-up-argument{
+		margin-left: 460px;
+		margin-top:-18px;
+		margin-bottom: 10px;
+		width: 0; 
+		height: 0; 
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		cursor:  pointer;
+		border-bottom: 12px solid #FFF;
+	}
+	}
+	
+	.user{
+	margin-top:13px;
+	margin-left:13px;
+	width:100px;
+	img { width: 100px; height:83px;}
+	border-bottom: 2px solid #FFF;
+		.image{
+		padding-bottom:4px;
+		}
+	}
+	.nom-user{
+	padding-left:3px;
+	width:100px;
+	margin-bottom:10px;
+	font-family:"gotham";
+	font-size:14px;
+	text-align:center;
+	margin-left: 10px;
+	color: black;
+	text-overflow: ellipsis;
+	overflow : hidden;
+	}
+	
+	#title5{
+		margin-left: -35px;
+		word-wrap:break-word;
+		max-height: 140px;
+		min-height:50px;
+		overflow : hidden;
+		margin-top: 13px;
+		
+		.title{
+		padding-right:5	px;
+		font-family: "georgia";
+		font-size: 19px;
+		font-weight: bold;
+		font-style: italic;
+		letter-spacing:-1px;
+		line-height: 20px;
+		}
+		
+		.cont{
+			word-wrap:break-word;
+			padding-top:8px;
+			padding-right:5	px;
+			font-family:"georgia";
+			font-size: 14px;
+			font-style: italic;
+		}
+	}
+	
+	#coco1{
+		margin-left: -35px;
+		margin-top: 10px;
+		
+	.stats{
+		font-family:"bebasneue-webfont";
+		font-size:26px;
+		float:right;
+
+		.box{
+		margin-left:10px;
+		padding-top: 4px;
+		}
+		.oui{
+		margin-left:7px;
+		}
+		
+		.toggleOpen{
+		width: 112px;
+		margin-left:222px;
+		margin-top:-31px;
+		font-family:"gotham";
+		font-size:16px;
+		font-weight:bold;
+		padding: 5px 10px 5px 10px;
+		background-color:#A3A3A3;
+		color:white;
+		cursor:  pointer;
+		}
+		.toggleOpen:hover{
+		     color:black;}
+
+	}
+	
+	}	
+
+
+	#coco{
+	margin-left: -35px;
+	margin-bottom:15px;
+	
+	.toggle{
+	word-wrap:break-word;
+	background-color: white;
+	margin-left: -20px;
+	#argcontent{
+	padding: 15px 15px 15px 15px;
+	margin-top:20px;
+	text-align: left;
+	padding-bottom:10px;
+	font-family:"georgia";
+	}
+	
+	}
+
+	}
+
+	}
+}
+
+#argument-neutre{
+	
+	.modifs{
+		margin-left:534px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -68px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #808080;
+		color: white;
+		}
+		.texte2{
+		height: 24px;
+		background-color: #C9C9C9;
+		color: white;
+		}	
+	}
+	
+	.modifs2{
+		margin-left:534px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -44px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #808080;
+		color: white;
+		}
+
+	}	
+	
+	#gris{
+	background-color:#D3D3D3;
+	margin-top:20px;
+	width: 534px;
+	min-height:170px;
+	margin-left:0px;
+	
+	.toggleClose2{
+	width: 533px;
+	height: 25px;
+	margin-left:1px;
+	margin-top:5px;
+	border-top: 2px Dashed;
+	padding-top:5px;
+	font-family:"gotham";
+	font-size:18px;
+	text-align:right;
+	
+	.toggleClose{
+	text-align:right;
+	padding-right:100px;
+	cursor:  pointer;
+	a{color:#000000;}
+	margin-bottom:5px;
+	}
+	
+	.arrow-up-argument{
+		margin-left: 460px;
+		margin-top:-18px;
+		margin-bottom: 10px;
+		width: 0; 
+		height: 0; 
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		cursor:  pointer;
+		border-bottom: 12px solid #FFF;
+	}
+	}
+	
+	.user{
+	margin-top:13px;
+	margin-left:13px;
+	width:100px;
+	img { width: 100px; height:83px;}
+	border-bottom: 2px solid #FFF;
+		.image{
+		padding-bottom:4px;
+		}
+	}
+	.nom-user{
+	padding-left:3px;
+	width:100px;
+	margin-bottom:10px;
+	font-family:"gotham";
+	font-size:14px;
+	text-align:center;
+	margin-left: 10px;
+	color: black;
+	text-overflow: ellipsis;
+	overflow : hidden;
+	}
+	
+	#title5{
+		margin-left: -35px;
+		word-wrap:break-word;
+		max-height: 140px;
+		min-height:50px;
+		overflow : hidden;
+		margin-top: 13px;
+		
+		.title{
+		padding-right:5	px;
+		font-family: "georgia";
+		font-size: 19px;
+		font-weight: bold;
+		font-style: italic;
+		letter-spacing:-1px;
+		line-height: 20px;
+		}
+		
+		.cont{
+			word-wrap:break-word;
+			padding-top:8px;
+			padding-right:5	px;
+			font-family:"georgia";
+			font-size: 14px;
+			font-style: italic;
+		}
+	}
+	
+	#coco1{
+		margin-left: -35px;
+		margin-top: 10px;
+		
+	.stats{
+		font-family:"bebasneue-webfont";
+		font-size:26px;
+		float:right;
+
+		.box{
+		margin-left:10px;
+		padding-top: 4px;
+		}
+		.oui{
+		margin-left:7px;
+		}
+
+		
+		.toggleOpen{
+		width: 112px;
+		margin-left:222px;
+		margin-top:-31px;
+		font-family:"gotham";
+		font-size:16px;
+		font-weight:bold;
+		padding: 5px 10px 5px 10px;
+		background-color:#A3A3A3;
+		color:white;
+		cursor:  pointer;
+		}
+		.toggleOpen:hover{
+		     color:black;}
+
+	}
+	
+	}	
+
+
+	#coco{
+	margin-left: -35px;
+	margin-bottom:15px;
+
+	
+	.toggle{
+	word-wrap:break-word;
+	background-color: white;
+	margin-left: -20px;
+	#argcontent{
+	padding: 15px;
+	margin-top:20px;
+	text-align: left;
+	padding-bottom:10px;
+	font-family:"georgia";
+	}
+	
+	}
+
+	}
+
+	}
+}
+
+
+#argument-contre{
+	
+	.modifs{
+		margin-left:-80px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -68px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #A54952;
+		color: white;
+		}
+		.texte2{
+		height: 24px;
+		background-color: #C9C9C9;
+		color: white;
+		}	
+	}
+
+	.modifs2{
+		margin-left:-80px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -44px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #A54952;
+		color: white;
+		}
+	}
+	
+	#rouge{
+	word-wrap:break-word;
+	background-color:#FF6969;
+	margin-top: 20px;
+	width: 534px;
+	min-height:170px;
+	margin-left:0px;
+	
+	.toggleClose2{
+	width: 533px;
+	height: 25px;
+	margin-left:1px;
+	margin-top:5px;
+	border-top: 2px Dashed;
+	padding-top:5px;
+	font-family:"gotham";
+	font-size:18px;
+	text-align:right;
+	
+	.toggleClose{
+	text-align:right;
+	padding-right:100px;
+	cursor:  pointer;
+	a{color:#000000;}
+	margin-bottom:5px;
+	}
+	
+	.arrow-up-argument{
+		margin-left: 460px;
+		margin-top:-18px;
+		margin-bottom: 10px;
+		width: 0; 
+		height: 0; 
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		cursor:  pointer;
+		border-bottom: 12px solid #FFF;
+	}
+	}
+	
+	.user{
+	margin-top:13px;
+	margin-left:13px;
+	width:100px;
+	img { width: 100px; height:83px;}
+	border-bottom: 2px solid #FFF;
+		.image{
+		padding-bottom:4px;
+		}
+	}
+	.nom-user{
+	padding-left:3px;
+	width:100px;
+	margin-bottom:10px;
+	font-family:"gotham";
+	font-size:14px;
+	text-align:center;
+	margin-left: 10px;
+	color: black;
+	text-overflow: ellipsis;
+	overflow : hidden;
+	}
+	
+	#title5{
+		margin-left: -35px;
+		word-wrap:break-word;
+		max-height: 140px;
+		min-height:50px;
+		overflow : hidden;
+		margin-top: 13px;
+		
+		.title{
+		padding-right:5	px;
+		font-family: "georgia";
+		font-size: 19px;
+		font-weight: bold;
+		font-style: italic;
+		letter-spacing:-1px;
+		line-height: 20px;
+		}
+		
+		.cont{
+			word-wrap:break-word;
+			padding-top:8px;
+			padding-right:5	px;
+			font-family:"georgia";
+			font-size: 14px;
+			font-style: italic;
+		}
+	}
+	
+	#coco1{
+		margin-left: -35px;
+		margin-top: 10px;
+		
+	.stats{
+		font-family:"bebasneue-webfont";
+		font-size:26px;
+		float:right;
+
+		.box{
+		margin-left:10px;
+		padding-top: 4px;
+		}
+		.oui{
+		margin-left:7px;
+		}
+
+		
+		.toggleOpen{
+		width: 112px;
+		margin-left:222px;
+		margin-top:-31px;
+		font-family:"gotham";
+		font-size:16px;
+		font-weight:bold;
+		padding: 5px 10px 5px 10px;
+		background-color:#A3A3A3;
+		color:white;
+		cursor:  pointer;
+		}
+		.toggleOpen:hover{
+		     color:black;}
+
+	}
+	
+	}	
+
+
+	#coco{
+	margin-left: -35px;
+	margin-bottom:15px;
+	
+	.toggle{
+	background-color: white;
+	margin-left: -20px;
+	#argcontent{
+	padding: 15px;
+	margin-top:20px;
+	text-align: left;
+	padding-bottom:10px;
+	font-family:"georgia";
+	}
+	
+	}
+
+	}
+
+	}
+}
+
+
+#argument-fc1{
+
+	.modifs2{
+		margin-left:534px;
+		width: 80px;
+		margin-top: 20px;
+		margin-bottom: -44px;
+		font-family: "gotham";
+		font-size: 16px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		
+		.texte{
+		padding-top: 2px;
+		height: 22px;
+		background-color: #839AB2;
+		color: white;
+		}
+
+	}
+	
+	#bleu{
+	background-color:#CCE6FF;
+	margin-top:20px;
+	width: 534px;
+	min-height:151px;
+	margin-left:0px;
+	
+	.toggleClose2{
+	width: 533px;
+	height: 25px;
+	margin-left:1px;
+	margin-top:5px;
+	border-top: 2px Dashed;
+	padding-top:5px;
+	font-family:"gotham";
+	font-size:18px;
+	text-align:right;
+	
+	.toggleClose{
+	text-align:right;
+	padding-right:100px;
+	cursor:  pointer;
+	a{color:#000000;}
+	margin-bottom:5px;
+	}
+	
+	.arrow-up-argument{
+		margin-left: 460px;
+		margin-top:-18px;
+		margin-bottom: 10px;
+		width: 0; 
+		height: 0; 
+		border-left: 8px solid transparent;
+		border-right: 8px solid transparent;
+		cursor:  pointer;
+		border-bottom: 12px solid #FFF;
+	}
+	}
+	
+	.user{
+	margin-top:13px;
+	margin-left:13px;
+	width:100px;
+	img { width: 100px; height:83px;}
+	border-bottom: 2px solid #FFF;
+		.image{
+		padding-bottom:4px;
+		}
+	}
+	.nom-user{
+	padding-left:3px;
+	width:100px;
+	margin-bottom:10px;
+	font-family:"gotham";
+	font-size:14px;
+	text-align:center;
+	margin-left: 10px;
+	color: black;
+	text-overflow: ellipsis;
+	overflow : hidden;
+	}
+	
+	#title5{
+		margin-left: -35px;
+		word-wrap:break-word;
+		max-height: 140px;
+		min-height:50px;
+		overflow : hidden;
+		margin-top: 13px;
+		
+		.title{
+		padding-right:5	px;
+		font-family: "georgia";
+		font-size: 19px;
+		font-weight: bold;
+		font-style: italic;
+		letter-spacing:-1px;
+		line-height: 20px;
+		}
+		
+		.cont{
+			word-wrap:break-word;
+			padding-top:8px;
+			padding-right:5	px;
+			font-family:"georgia";
+			font-size: 14px;
+			font-style: italic;
+		}
+	}
+	
+	#coco1{
+		margin-left: -35px;
+		margin-top: 10px;
+		
+	.stats{
+		font-family:"bebasneue-webfont";
+		font-size:26px;
+		float:right;
+
+		.box{
+		margin-left:10px;
+		padding-top: 4px;
+		}
+		.oui{
+		margin-left:7px;
+		}
+
+		
+		.toggleOpen{
+		width: 112px;
+		margin-left:222px;
+		margin-top:-31px;
+		font-family:"gotham";
+		font-size:16px;
+		font-weight:bold;
+		padding: 5px 10px 5px 10px;
+		background-color:#A3A3A3;
+		color:white;
+		cursor:  pointer;
+		}
+		.toggleOpen:hover{
+		     color:black;}
+
+	}
+	
+	}	
+
+
+	#coco{
+	margin-left: -35px;
+	margin-bottom:15px;
+	
+	.toggle{
+	word-wrap:break-word;
+	background-color: white;
+	margin-left: -20px;
+	#argcontent{
+	padding: 15px 15px 15px 15px;
+	margin-top:20px;
+	text-align: left;
+	padding-bottom:10px;
+	font-family:"georgia";
+	}
+	
+	}
+
+	}
+
+	}
+}
+
