--- a/app/views/shared/_argument_fc1_badge.html.erb
+++ b/app/views/shared/_argument_fc1_badge.html.erb
@@ -1,23 +1,24 @@
-<section id="argument-contre">
+<section id="argument-fc1">
 		<div class="row" id='initial'>
-			<% if current_user && current_user == argument.user %>
-			<% if argument.argumentable.class == Debate %>
-			<div class="modifs">
-				<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-				<div class= 'texte2'><%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %></div>
-			</div>
-			<% elsif argument.modifiable? %>
-			<div class="modifs2">
-				<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-			</div>
-			<% end %>
-			<% elsif current_user.try(:admin?)%>
+				<% if current_user && current_user == argument.user %>
+				<% if argument.argumentable.class == Debate %>
 				<div class="modifs">
 					<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
 					<div class= 'texte2'><%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %></div>
 				</div>
-			<% end%>
-		     <div class id="rouge">
+				<% elsif argument.modifiable? %>
+				<div class="modifs2">
+					<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
+				</div>
+				<% end %>
+				<% elsif current_user.try(:admin?)%>
+					<div class="modifs">
+						<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
+						<div class= 'texte2'><%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %></div>
+					</div>
+				<% end%>
+				
+		     <div class id="bleu">
 		        <div class="row" id="descente">
 	                 <div class="span2">
 	                 	<div class="user">
@@ -66,8 +67,8 @@
 					<div class="arrow-up-argument"></div>
 				</div>
 	         </div>
-
 	    </div>
+	
      <div class="argcoms">        
         <div class="row">
 	        <div class="span8">
